# run-action

./: .gitignore  README.md  action.yaml  example.yaml  pyproject.toml
.github/workflows/: dependencies.yaml
